--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@nomicfoundation/hardhat-viem": "1.0.0",
     "dotenv": "^16.0.3",
     "hardhat": "^2.19.2",
+    "poseidon-solidity": "^0.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-toastify": "^9.1.1",
