--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@nomicfoundation/hardhat-toolbox-viem": "1.0.0",
     "@nomicfoundation/hardhat-viem": "1.0.0",
     "dotenv": "^16.0.3",
+    "ethers": "^6.11.0",
     "hardhat": "^2.19.2",
     "poseidon-solidity": "^0.0.5",
     "react": "^18.2.0",
