--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "@nomicfoundation/hardhat-network-helpers": "^1.0.0",
     "@nomicfoundation/hardhat-toolbox-viem": "1.0.0",
     "@nomicfoundation/hardhat-viem": "1.0.0",
+    "circomlibjs": "^0.1.7",
     "dotenv": "^16.0.3",
     "ethers": "^6.11.0",
     "hardhat": "^2.19.2",
+    "merkletreejs": "^0.3.11",
     "poseidon-solidity": "^0.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
