--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test": "NODE_OPTIONS='--experimental-loader ts-node/esm/transpile-only' hardhat test"
   },
   "dependencies": {
+    "@fontsource/space-grotesk": "^5.0.16",
     "@noir-lang/backend_barretenberg": "0.23.0",
     "@noir-lang/noir_js": "0.23.0",
     "@noir-lang/noir_wasm": "0.23.0",
@@ -44,6 +45,7 @@
     "@vitejs/plugin-react-swc": "^3.5.0",
     "chai": "^4.2.0",
     "hardhat-gas-reporter": "^1.0.9",
+    "sass": "^1.70.0",
     "solidity-coverage": "^0.8.5",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.3",
