--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -38,7 +38,7 @@ jobs:
       - name: Install dependencies
         run: yarn
       - name: Build
-        run: NETWORK=scrollSepolia yarn build
+        run: yarn prod
       - name: Setup Pages
         uses: actions/configure-pages@v3
       - name: Upload artifact
