add hardhat compile for typechain

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "preview": "vite preview",
     "deploy": "hardhat compile && NODE_OPTIONS='--experimental-loader ts-node/esm/transpile-only' hardhat run --network ${NETWORK} scripts/deploy.ts",
     "test": "NODE_OPTIONS='--experimental-loader ts-node/esm/transpile-only' hardhat test",
-    "prod": "vite build"
+    "prod": "hardhat compile && NODE_OPTIONS='--experimental-loader ts-node/esm/transpile-only' && vite build"
   },
   "dependencies": {
     "@fontsource/space-grotesk": "^5.0.16",
