--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -30,6 +30,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+      - name: Install Foundry
+        uses: foundry-rs/foundry-toolchain@v1
       - name: Set up Node
         uses: actions/setup-node@v3
         with:
